tests/ui/parser/unsafe-foreign-mod-2.stderr
error: expected `{`, found keyword `unsafe`
  --> $DIR/unsafe-foreign-mod-2.rs:1:12
   |
LL | extern "C" unsafe {
   |            ^^^^^^ expected `{`

error: aborting due to 1 previous error

